Base: postgresql-connection-setup

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+POSTGRES_HOST="your_postgres_host_here"
+POSTGRES_DB="your_postgres_db_here"
+POSTGRES_USER="your_postgres_user_here"
+POSTGRES_PORT="your_postgres_port_here"
+POSTGRES_PASSWORD="your_postgres_password_here"
+POSTGRES_POOL_SIZE="your_postgres_pool_size_here"
+POSTGRES_MAX_OVERFLOW="your_postgres_max_overflow_here"
